<resources>
    <string name="app_name">Housify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Housify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="my_houses">My houses</string>
    <string name="publish_offer">Publish offer</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="userId">userId</string>
    <string name="default_location">defaultLocation</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="euro">€</string>
    <string name="rooms">rooms</string>
    <string name="create">Create</string>
    <string name="title_activity_property_maps">Map</string>
    <string name="sort">Sort</string>
    <string name="title_activity_property_filter">Filter</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_property_details">Details</string>
    <string name="title_activity_property_edit">Edit property</string>
    <string name="edit_property">Edit property</string>
    <string name="no_category">No category</string>
</resources>
