<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_mine"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/my_houses" />
        <item
            android:id="@+id/nav_new_house"
            android:icon="@drawable/ic_publish_black_24dp"
            android:title="@string/publish_offer" />
    </group>
    <group >
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="Log out" />
    </group>

</menu>
